--- a/comicstore/comicapp/templates/comicapp/index.html
+++ b/comicstore/comicapp/templates/comicapp/index.html
@@ -29,7 +29,7 @@
                                     <h2> Total number of episodes: {{ comics_item.episodes }}</h2>
                                 </div>
                             </div>
-                            <div>
+                            <div class="comics-actions">
                                 <a href="" class="btn">More Details</a>
                             </div>
                         </article>
