details page + slug

--- a/comicstore/comicapp/templates/comicapp/index.html
+++ b/comicstore/comicapp/templates/comicapp/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <title>All Comics</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'comicapp/styles/base.css'%}">
     <link rel="stylesheet" href="{%static 'comicapp/styles/all-comics.css'%}">
 </head>
 <body>
     <header id="main-header">
         <nav><a href="/comics" id="main-logo">DjangoComics</a></nav>
-        <h1>DC and MArvel Comics </h1>
+        <h1>DC and Marvel Comics </h1>
         <p>Find your Superhero comics</p>
     </header>
     <main>
