--- a/comicstore/comicapp/templates/includes/comics_item.html
+++ b/comicstore/comicapp/templates/includes/comics_item.html
@@ -2,7 +2,7 @@
     <article>
         <div class="comics-summary">
             <div class="comics-image">
-                <img src="" alt="">
+                <img src="{{ image }}" alt="{{ title }}">
             </div>
             <div class="comics-details">
                 <h3>{{ title }}</h3>
