--- a/comicstore/comicapp/templates/comicapp/comics_details.html
+++ b/comicstore/comicapp/templates/comicapp/comics_details.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    {{ comic_title }}
+    {{ comic.title }}
 {% endblock %}
 
 {% block site_css %}
@@ -11,23 +11,35 @@
 {% endblock %}
 
 {% block main_heading %}
-    {{ comic_title }}
+    {{ comic.title }}
 {% endblock %}
 
 {% block body %}
 
 {% if comic_found %}
     <article>
-        <img src="" alt="">
+        <img id="main-image" src="{{ comic.image.url }}" alt="{{ comic.title }}">
 
         <section id="release">
             <h2>Date of release</h2>
-            <h3>Next episode of comic will be released on: (DATE)</h3>
+            <h3>Next episode of comic will be released on: {{ comic.date }}</h3>
         </section>
 
         <section id="details"></section>
         <h2>What's the episode about</h2>
-        <p> {{comic_description}}</p>
+        <p> {{comic.description}}</p>
+        <section id="subscription">
+            <h3>Get notified before release date or when stocks are renewed</h3>
+            <form>
+                <p>Type in your email:</p>
+                <ul>
+                    {{ form.as_ul }}
+                </ul>
+                <div id="subscription-actions">
+                    <button>Subscribe</button>
+                </div>
+            </form>
+        </section>
     </article>
 {% else %}
 <p>no comics found under this slug</p>
