FIX: subscription form and redirecting render

--- a/comicstore/comicapp/templates/comicapp/sub-success.html
+++ b/comicstore/comicapp/templates/comicapp/sub-success.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block site_css %}
-
+<link rel="stylesheet" href="{% static 'comicapp/styles/sub-confirmation.css' %}">
 {% endblock %}
 
 {% block main_heading %}Thank you for subscribing to us! {% endblock %}
