--- a/comicstore/comicapp/templates/includes/comics_item.html
+++ b/comicstore/comicapp/templates/includes/comics_item.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="comics-actions">
-            <a href="{% url 'comics-details' slug %}" class="btn">More Details</a>
+            <a href="{% url 'comics-detail' slug %}" class="btn">More Details</a>
         </div>
     </article>
 </li>
